[gd_scene load_steps=199 format=2]

[ext_resource path="res://gfx/sprites/broken_player.png" type="Texture" id=1]
[ext_resource path="res://gfx/explosions/explosion1.png" type="Texture" id=2]
[ext_resource path="res://gfx/explosions/explosion2.png" type="Texture" id=3]
[ext_resource path="res://gfx/explosions/explosion3.png" type="Texture" id=4]
[ext_resource path="res://scenes/Player/PlayerDeath/PlayerDeath.gd" type="Script" id=5]
[ext_resource path="res://sfx/explosions/explode3.wav" type="AudioStream" id=6]
[ext_resource path="res://sfx/explosions/explode1.wav" type="AudioStream" id=7]
[ext_resource path="res://sfx/explosions/explode2.wav" type="AudioStream" id=8]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.2
bounce = 0.6

[sub_resource type="AtlasTexture" id=2]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 512, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=3]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 768, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=4]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 1024, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=5]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 1280, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=6]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 1536, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=7]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 1792, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=8]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 0, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=9]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 256, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=10]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 512, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=11]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 768, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=12]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 1024, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=13]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 1280, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=14]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 1536, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=15]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 1792, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=16]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 0, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=17]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 256, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=18]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 512, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=19]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 768, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=20]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 1024, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=21]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 1280, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=22]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 1536, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=23]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 1792, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=24]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 0, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=25]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 256, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=26]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 512, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=27]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 768, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=28]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 1024, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=29]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 1280, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=30]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 1536, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=31]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 1792, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=32]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 0, 1024, 256, 256 )

[sub_resource type="AtlasTexture" id=33]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 256, 1024, 256, 256 )

[sub_resource type="AtlasTexture" id=34]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 512, 1024, 256, 256 )

[sub_resource type="AtlasTexture" id=35]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 768, 1024, 256, 256 )

[sub_resource type="AtlasTexture" id=36]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 1024, 1024, 256, 256 )

[sub_resource type="AtlasTexture" id=37]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 1280, 1024, 256, 256 )

[sub_resource type="AtlasTexture" id=38]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 1536, 1024, 256, 256 )

[sub_resource type="AtlasTexture" id=39]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 1792, 1024, 256, 256 )

[sub_resource type="AtlasTexture" id=40]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 0, 1280, 256, 256 )

[sub_resource type="AtlasTexture" id=41]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 256, 1280, 256, 256 )

[sub_resource type="AtlasTexture" id=42]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 512, 1280, 256, 256 )

[sub_resource type="AtlasTexture" id=43]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 768, 1280, 256, 256 )

[sub_resource type="AtlasTexture" id=44]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 1024, 1280, 256, 256 )

[sub_resource type="AtlasTexture" id=45]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 1280, 1280, 256, 256 )

[sub_resource type="AtlasTexture" id=46]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 1536, 1280, 256, 256 )

[sub_resource type="AtlasTexture" id=47]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 1792, 1280, 256, 256 )

[sub_resource type="AtlasTexture" id=48]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 0, 1536, 256, 256 )

[sub_resource type="AtlasTexture" id=49]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 256, 1536, 256, 256 )

[sub_resource type="AtlasTexture" id=50]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 512, 1536, 256, 256 )

[sub_resource type="AtlasTexture" id=51]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 768, 1536, 256, 256 )

[sub_resource type="AtlasTexture" id=52]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 1024, 1536, 256, 256 )

[sub_resource type="AtlasTexture" id=53]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 1280, 1536, 256, 256 )

[sub_resource type="AtlasTexture" id=54]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 1536, 1536, 256, 256 )

[sub_resource type="AtlasTexture" id=55]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 1792, 1536, 256, 256 )

[sub_resource type="AtlasTexture" id=56]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 0, 1792, 256, 256 )

[sub_resource type="AtlasTexture" id=57]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 256, 1792, 256, 256 )

[sub_resource type="AtlasTexture" id=58]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 512, 1792, 256, 256 )

[sub_resource type="AtlasTexture" id=59]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 768, 1792, 256, 256 )

[sub_resource type="AtlasTexture" id=60]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 1024, 1792, 256, 256 )

[sub_resource type="AtlasTexture" id=61]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 1280, 1792, 256, 256 )

[sub_resource type="AtlasTexture" id=62]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 1536, 1792, 256, 256 )

[sub_resource type="AtlasTexture" id=63]
flags = 5
atlas = ExtResource( 2 )
region = Rect2( 1792, 1792, 256, 256 )

[sub_resource type="SpriteFrames" id=64]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ) ],
"loop": false,
"name": "explode",
"speed": 60.0
} ]

[sub_resource type="AtlasTexture" id=65]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 512, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=66]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 768, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=67]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 1024, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=68]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 1280, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=69]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 1536, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=70]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 1792, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=71]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 0, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=72]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 256, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=73]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 512, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=74]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 768, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=75]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 1024, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=76]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 1280, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=77]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 1536, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=78]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 1792, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=79]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 0, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=80]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 256, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=81]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 512, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=82]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 768, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=83]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 1024, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=84]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 1280, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=85]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 1536, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=86]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 1792, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=87]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 0, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=88]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 256, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=89]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 512, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=90]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 768, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=91]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 1024, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=92]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 1280, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=93]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 1536, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=94]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 1792, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=95]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 0, 1024, 256, 256 )

[sub_resource type="AtlasTexture" id=96]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 256, 1024, 256, 256 )

[sub_resource type="AtlasTexture" id=97]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 512, 1024, 256, 256 )

[sub_resource type="AtlasTexture" id=98]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 768, 1024, 256, 256 )

[sub_resource type="AtlasTexture" id=99]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 1024, 1024, 256, 256 )

[sub_resource type="AtlasTexture" id=100]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 1280, 1024, 256, 256 )

[sub_resource type="AtlasTexture" id=101]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 1536, 1024, 256, 256 )

[sub_resource type="AtlasTexture" id=102]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 1792, 1024, 256, 256 )

[sub_resource type="AtlasTexture" id=103]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 0, 1280, 256, 256 )

[sub_resource type="AtlasTexture" id=104]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 256, 1280, 256, 256 )

[sub_resource type="AtlasTexture" id=105]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 512, 1280, 256, 256 )

[sub_resource type="AtlasTexture" id=106]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 768, 1280, 256, 256 )

[sub_resource type="AtlasTexture" id=107]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 1024, 1280, 256, 256 )

[sub_resource type="AtlasTexture" id=108]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 1280, 1280, 256, 256 )

[sub_resource type="AtlasTexture" id=109]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 1536, 1280, 256, 256 )

[sub_resource type="AtlasTexture" id=110]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 1792, 1280, 256, 256 )

[sub_resource type="AtlasTexture" id=111]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 0, 1536, 256, 256 )

[sub_resource type="AtlasTexture" id=112]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 256, 1536, 256, 256 )

[sub_resource type="AtlasTexture" id=113]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 512, 1536, 256, 256 )

[sub_resource type="AtlasTexture" id=114]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 768, 1536, 256, 256 )

[sub_resource type="AtlasTexture" id=115]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 1024, 1536, 256, 256 )

[sub_resource type="AtlasTexture" id=116]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 1280, 1536, 256, 256 )

[sub_resource type="AtlasTexture" id=117]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 1536, 1536, 256, 256 )

[sub_resource type="AtlasTexture" id=118]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 1792, 1536, 256, 256 )

[sub_resource type="AtlasTexture" id=119]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 0, 1792, 256, 256 )

[sub_resource type="AtlasTexture" id=120]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 256, 1792, 256, 256 )

[sub_resource type="AtlasTexture" id=121]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 512, 1792, 256, 256 )

[sub_resource type="AtlasTexture" id=122]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 768, 1792, 256, 256 )

[sub_resource type="AtlasTexture" id=123]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 1024, 1792, 256, 256 )

[sub_resource type="AtlasTexture" id=124]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 1280, 1792, 256, 256 )

[sub_resource type="AtlasTexture" id=125]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 1536, 1792, 256, 256 )

[sub_resource type="AtlasTexture" id=126]
flags = 5
atlas = ExtResource( 4 )
region = Rect2( 1792, 1792, 256, 256 )

[sub_resource type="SpriteFrames" id=127]
animations = [ {
"frames": [ SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ), SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ), SubResource( 104 ), SubResource( 105 ), SubResource( 106 ), SubResource( 107 ), SubResource( 108 ), SubResource( 109 ), SubResource( 110 ), SubResource( 111 ), SubResource( 112 ), SubResource( 113 ), SubResource( 114 ), SubResource( 115 ), SubResource( 116 ), SubResource( 117 ), SubResource( 118 ), SubResource( 119 ), SubResource( 120 ), SubResource( 121 ), SubResource( 122 ), SubResource( 123 ), SubResource( 124 ), SubResource( 125 ), SubResource( 126 ) ],
"loop": false,
"name": "explode",
"speed": 40.0
} ]

[sub_resource type="AtlasTexture" id=128]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 512, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=129]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 768, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=130]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 1024, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=131]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 1280, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=132]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 1536, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=133]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 1792, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=134]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 0, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=135]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 256, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=136]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 512, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=137]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 768, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=138]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 1024, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=139]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 1280, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=140]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 1536, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=141]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 1792, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=142]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 0, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=143]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 256, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=144]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 512, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=145]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 768, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=146]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 1024, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=147]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 1280, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=148]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 1536, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=149]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 1792, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=150]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 0, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=151]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 256, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=152]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 512, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=153]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 768, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=154]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 1024, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=155]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 1280, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=156]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 1536, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=157]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 1792, 768, 256, 256 )

[sub_resource type="AtlasTexture" id=158]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 0, 1024, 256, 256 )

[sub_resource type="AtlasTexture" id=159]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 256, 1024, 256, 256 )

[sub_resource type="AtlasTexture" id=160]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 512, 1024, 256, 256 )

[sub_resource type="AtlasTexture" id=161]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 768, 1024, 256, 256 )

[sub_resource type="AtlasTexture" id=162]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 1024, 1024, 256, 256 )

[sub_resource type="AtlasTexture" id=163]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 1280, 1024, 256, 256 )

[sub_resource type="AtlasTexture" id=164]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 1536, 1024, 256, 256 )

[sub_resource type="AtlasTexture" id=165]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 1792, 1024, 256, 256 )

[sub_resource type="AtlasTexture" id=166]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 0, 1280, 256, 256 )

[sub_resource type="AtlasTexture" id=167]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 256, 1280, 256, 256 )

[sub_resource type="AtlasTexture" id=168]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 512, 1280, 256, 256 )

[sub_resource type="AtlasTexture" id=169]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 768, 1280, 256, 256 )

[sub_resource type="AtlasTexture" id=170]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 1024, 1280, 256, 256 )

[sub_resource type="AtlasTexture" id=171]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 1280, 1280, 256, 256 )

[sub_resource type="AtlasTexture" id=172]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 1536, 1280, 256, 256 )

[sub_resource type="AtlasTexture" id=173]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 1792, 1280, 256, 256 )

[sub_resource type="AtlasTexture" id=174]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 0, 1536, 256, 256 )

[sub_resource type="AtlasTexture" id=175]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 256, 1536, 256, 256 )

[sub_resource type="AtlasTexture" id=176]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 512, 1536, 256, 256 )

[sub_resource type="AtlasTexture" id=177]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 768, 1536, 256, 256 )

[sub_resource type="AtlasTexture" id=178]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 1024, 1536, 256, 256 )

[sub_resource type="AtlasTexture" id=179]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 1280, 1536, 256, 256 )

[sub_resource type="AtlasTexture" id=180]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 1536, 1536, 256, 256 )

[sub_resource type="AtlasTexture" id=181]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 1792, 1536, 256, 256 )

[sub_resource type="AtlasTexture" id=182]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 0, 1792, 256, 256 )

[sub_resource type="AtlasTexture" id=183]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 256, 1792, 256, 256 )

[sub_resource type="AtlasTexture" id=184]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 512, 1792, 256, 256 )

[sub_resource type="AtlasTexture" id=185]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 768, 1792, 256, 256 )

[sub_resource type="AtlasTexture" id=186]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 1024, 1792, 256, 256 )

[sub_resource type="AtlasTexture" id=187]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 1280, 1792, 256, 256 )

[sub_resource type="AtlasTexture" id=188]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 1536, 1792, 256, 256 )

[sub_resource type="AtlasTexture" id=189]
flags = 5
atlas = ExtResource( 3 )
region = Rect2( 1792, 1792, 256, 256 )

[sub_resource type="SpriteFrames" id=190]
animations = [ {
"frames": [ SubResource( 128 ), SubResource( 129 ), SubResource( 130 ), SubResource( 131 ), SubResource( 132 ), SubResource( 133 ), SubResource( 134 ), SubResource( 135 ), SubResource( 136 ), SubResource( 137 ), SubResource( 138 ), SubResource( 139 ), SubResource( 140 ), SubResource( 141 ), SubResource( 142 ), SubResource( 143 ), SubResource( 144 ), SubResource( 145 ), SubResource( 146 ), SubResource( 147 ), SubResource( 148 ), SubResource( 149 ), SubResource( 150 ), SubResource( 151 ), SubResource( 152 ), SubResource( 153 ), SubResource( 154 ), SubResource( 155 ), SubResource( 156 ), SubResource( 157 ), SubResource( 158 ), SubResource( 159 ), SubResource( 160 ), SubResource( 161 ), SubResource( 162 ), SubResource( 163 ), SubResource( 164 ), SubResource( 165 ), SubResource( 166 ), SubResource( 167 ), SubResource( 168 ), SubResource( 169 ), SubResource( 170 ), SubResource( 171 ), SubResource( 172 ), SubResource( 173 ), SubResource( 174 ), SubResource( 175 ), SubResource( 176 ), SubResource( 177 ), SubResource( 178 ), SubResource( 179 ), SubResource( 180 ), SubResource( 181 ), SubResource( 182 ), SubResource( 183 ), SubResource( 184 ), SubResource( 185 ), SubResource( 186 ), SubResource( 187 ), SubResource( 188 ), SubResource( 189 ) ],
"loop": false,
"name": "explode",
"speed": 52.0
} ]

[node name="PlayerDeath" type="RigidBody2D"]
physics_material_override = SubResource( 1 )
contacts_reported = 1
contact_monitor = true
linear_damp = 0.0
script = ExtResource( 5 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 0, -24, -24, 24, -16, 24, 0, 16, 16, 24, 24, 24 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Explosion1" type="AnimatedSprite" parent="."]
rotation = 1.03904
frames = SubResource( 64 )
animation = "explode"
offset = Vector2( 21.4674, 7.16084 )

[node name="Explosion3" type="AnimatedSprite" parent="."]
position = Vector2( 0.982155, 4.06893 )
rotation = 5.41696
frames = SubResource( 127 )
animation = "explode"
offset = Vector2( 7.5843, -20.8363 )

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 0, -2.12132 )
rotation = 2.15633

[node name="Explosion2" type="AnimatedSprite" parent="Node2D"]
position = Vector2( 47.0365, -1.67811 )
frames = SubResource( 190 )
animation = "explode"

[node name="SFXExp1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -12.0

[node name="SFXExp2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -2.0

[node name="SFXExp3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = 8.0

[node name="Camera2D" type="Camera2D" parent="."]
[connection signal="body_entered" from="." to="." method="_on_PlayerDeath_body_entered"]
[connection signal="animation_finished" from="Explosion1" to="." method="_on_Explosion1_animation_finished"]
[connection signal="animation_finished" from="Explosion3" to="." method="_on_Explosion3_animation_finished"]
[connection signal="animation_finished" from="Node2D/Explosion2" to="." method="_on_Explosion2_animation_finished"]
